Closed
Bug 238393
Opened 22 years ago
Closed 22 years ago
DRefTool analysis for jsd files
Categories
(Other Applications Graveyard :: Venkman JS Debugger, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: timeless, Assigned: timeless)
Details
Attachments
(1 file)
|
977 bytes,
patch
|
rginda
:
review+
asa
:
approval1.7+
|
Details | Diff | Splinter Review |
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/js/jsd/jsd_xpc.cpp&rev=1.65&mark=2675#2670
Deref-error: "file"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/js/jsd/jsd_xpc.cpp&rev=1.65&mark=2699#2694
Deref-error: "rec"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/js/jsd/jsd_xpc.cpp&rev=1.65&mark=2706#2701
Deref-error: "rec"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/js/jsd/jsd_xpc.cpp&rev=1.65&mark=2715#2710
Deref-error: "rec"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/js/jsd/jsd_xpc.cpp&rev=1.65&mark=2723#2718
Deref-error: "rec"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/js/jsd/jsd_xpc.cpp&rev=1.65&mark=2739#2734
Deref-error: "rec"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/js/jsd/jsd_xpc.cpp&rev=1.65&mark=2744#2739
Deref-error: "rec"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/js/jsd/jsd_xpc.cpp&rev=1.65&mark=2746#2741
Deref-error: "rec"
the newzap failure is oom so return early.
the fopen failure (no file handles available) is non critical and we just need
to avoid fclose(0) which will crash
Attachment #144583 -
Flags: review?(rginda)
Comment 2•22 years ago
|
||
Comment on attachment 144583 [details] [diff] [review]
handle newzap and fopen failures
r=rginda
Attachment #144583 -
Flags: review?(rginda) → review+
Attachment #144583 -
Flags: approval1.7?
Comment 3•22 years ago
|
||
Comment on attachment 144583 [details] [diff] [review]
handle newzap and fopen failures
a=asa (on behalf of drivers) for checkin to 1.7
Attachment #144583 -
Flags: approval1.7? → approval1.7+
mozilla/js/jsd/jsd_xpc.cpp 1.66
mozilla/js/jsd/jsd_xpc.cpp 1.67
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Updated•21 years ago
|
Product: Core → Other Applications
Updated•7 years ago
|
Product: Other Applications → Other Applications Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•