Bug 238393 DRefTool analysis for jsd files r=rginda GC_MARK_DEBUG is not part of the build...